--- a/hello.html
+++ b/hello.html
@@ -9,14 +9,19 @@
     </style>
 </head>
 <body>
-    <div>! HELLO !  </div>
-    <h1>안녕 h1</h1>
-    <h2>안녕 h2</h2>
-    <h3>안녕 h3</h3>
+    <header>
+        <nav>
+            <ul>
+                <li>list-1</li>
+                <li>llist-2</li>
+                <li>list-3</li>
+            </ul>
 
-    <section>
-        <div>HELLO</div>
-    </section>
+        </nav>
+
+
+
+    </header>
 
 </body>
 </html>
