--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,7 @@
                 <li>list-3</li>
                 <li>list-4</li>
                 <li>list-5</li>
-                <li>llist-6</li>
+                <li>list-6</li>
             </ul>
 
         </nav>
