--- a/day01/shinhan.html
+++ b/day01/shinhan.html
@@ -6,39 +6,41 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="image/SHINHAN.jpg" alt="신한투자증권">
-        <h1>header 부분입니다.</h1>
-    </header>
-    <br>
-    <nav>
-        <ul>
-            <li><a href="">메인 nav 1</a></li>
-            <li><a href="">메인 nav 2</a></li>
-            <li><a href="">메인 nav 3</a></li>
-        </ul>
-    </nav>
-    <br>
-    <aside>
-        <ul>
-            <li><a href="">aside nav 1</a></li>
-            <li><a href="">aside nav 2</a></li>
-            <li><a href="">aside nav 3</a></li> 
-        </ul>
-    </aside>
+    <div id="wrap">
+        <header>
+            <img src="image/SHINHAN.jpg" alt="신한투자증권">
+            <h1>header 부분입니다.</h1>
+        </header>
+        <br>
+        <nav>
+            <ul>
+                <li><a href="">메인 nav 1</a></li>
+                <li><a href="">메인 nav 2</a></li>
+                <li><a href="">메인 nav 3</a></li>
+            </ul>
+        </nav>
+        <br>
+        <aside>
+            <ul>
+                <li><a href="">aside nav 1</a></li>
+                <li><a href="">aside nav 2</a></li>
+                <li><a href="">aside nav 3</a></li> 
+            </ul>
+        </aside>
 
-    <article>
-        <h2>HTML5와 CSS 활용하기</h2>
-        <h4>html과 css에 관한 소제목</h4>
-        <p>HTML은 뼈대에 관한 내용이라면 CSS는 꾸며주는 디자인과 같은 내용입니다.</p>
+        <article>
+            <h2>HTML5와 CSS 활용하기</h2>
+            <h4>html과 css에 관한 소제목</h4>
+            <p>HTML은 뼈대에 관한 내용이라면 CSS는 꾸며주는 디자인과 같은 내용입니다.</p>
 
-        <section>
-            <h4>여기는 section영역입니다.</h4>
-            <p></p>
-        </section>
-    </article>
-    <br>
-    <footer></footer>
+            <section>
+                <h4>여기는 section영역입니다.</h4>
+                <p></p>
+            </section>
+        </article>
+        <br>
+        <footer></footer>
+    </div>
     
 </body>
 </html>
