--- a/js02/timer.html
+++ b/js02/timer.html
@@ -4,25 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="day01.js"></script>
+    <script defer src="js/timer.js"></script>
 </head>
 <body>
-    
+    <button id="timer">시작</button>
+    <button id="stop">종료</button>
+    <div id="result"></div>  
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
