--- a/work/final_정희빈_0809/list.html
+++ b/work/final_정희빈_0809/list.html
@@ -11,15 +11,15 @@
 
     <section >
         <label for="list">목록추가</label>
-        <input type="text" id="name" name="name">
+        <input type="text" id="name" name="name" required>
         <button type="submit" id="add">추가</button>
     </section>
 
 
-    <section class="list" id="main">
+    <section  id="main">
         
 
-            <ul id="list1">
+            <ul class="list" id="list1">
 
             </ul>
 
